--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+##NOMBRE DEL SERVICIO
+spring.application.name=alumno-microservicio
 ##CONEXCION BASE DE DATOS
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/idat_setiembreiiie
